--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "juan centurion",
   "license": "ISC",
   "dependencies": {
+    "aws-jwt-verify": "^4.0.1",
     "bcrypt": "^5.1.1",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
